NewArchive/35b5459da934024efc5733e1a15e086a-bff069f172c3f5c3bc4a5e28d7ac9796/output
+ g++ -std=c++11 -Wall -pedantic main.cpp
main.cpp: In constructor ‘SoDirty::SoDirty(double)’:
main.cpp:21:24: error: ‘x’ was not declared in this scope
         radioactive = &x;
                        ^
main.cpp:24:5: error: expected ‘;’ before ‘}’ token
     };
     ^
